crates/pg_syntax/tests/snapshots/postgres_regress/numeric_big@75.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO num_exp_sub VALUES (1,3,'60302029489319384367663884408085842723.62767149018508907178556555587874475318127115521321786273614780129829831438626014991843514783028586066905089122532715288580534070605779007112619958852628801540288008918482404759132944298520148080184250697297150817299173701934285646867489426483932830299434150464278537812298564822479785688909850915447762856384542090714278516461905872647123125352735037721325154184406043613668806975385533851732090363979459292404685190942209855935216608429897041525858540380754759125150233053469999022855035');"
---
InsertStmt@0..567
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..23
    Ident@12..23 "num_exp_sub"
  Whitespace@23..24 " "
  SelectStmt@24..565
    Values@24..30 "VALUES"
    Whitespace@30..31 " "
    Ascii40@31..32 "("
    List@32..565
      AConst@32..33
        Iconst@32..33 "1"
      Ascii44@33..34 ","
      AConst@34..35
        Iconst@34..35 "3"
      Ascii44@35..36 ","
      AConst@36..565
        Sconst@36..565 "'60302029489319384367 ..."
  Ascii41@565..566 ")"
  Ascii59@566..567 ";"

